[gd_scene load_steps=6 format=3 uid="uid://c4nafikdyelds"]

[ext_resource type="Script" path="res://addons/object_creator/Scripts/InputScripts/array_element_input.gd" id="1_d8801"]
[ext_resource type="PackedScene" uid="uid://b45y4htt48hlq" path="res://addons/object_creator/Scenes/break_line_array.tscn" id="2_2g3rl"]
[ext_resource type="Texture2D" uid="uid://cya8l0htpkrnn" path="res://addons/object_creator/Assets/Arrow-Up.png" id="2_8ajga"]
[ext_resource type="Texture2D" uid="uid://b3b6pivlgk6nc" path="res://addons/object_creator/Assets/Arrow-Down.png" id="3_knb70"]
[ext_resource type="Texture2D" uid="uid://cw164j5sq8t7c" path="res://addons/object_creator/Assets/Cross.png" id="4_h1ket"]

[node name="ArrayElementInput" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d8801")

[node name="BreakLine" parent="." instance=ExtResource("2_2g3rl")]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 2

[node name="MoveUpButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
icon = ExtResource("2_8ajga")

[node name="MoveDownButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
icon = ExtResource("3_knb70")

[node name="RemoveButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
icon = ExtResource("4_h1ket")

[connection signal="pressed" from="ButtonContainer/MoveUpButton" to="." method="_on_move_up_pressed"]
[connection signal="pressed" from="ButtonContainer/MoveDownButton" to="." method="_on_move_down_pressed"]
[connection signal="pressed" from="ButtonContainer/RemoveButton" to="." method="_on_remove_button_pressed"]
